--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "yarn partytown && next build",
     "start": "next start",
     "lint": "next lint",
     "partytown": "partytown copylib public/~partytown"    
